k8s/v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motowild-app
  namespace: motowild
  labels:
    app: motowild-app
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: motowild-app
  template:
    metadata:
      labels:
        app: motowild-app
    spec:
      containers:
        - name: motowild-app
          image: voyopsx/motowild-app:0.0.1.RELEASE
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
