k8s/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motowild-service
  namespace: motowild
  labels:
    app: motowild-app
spec:
  type: NodePort
  selector:
    app: motowild-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
