k8s/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motowild-ingress
  namespace: motowild
spec:
  defaultBackend:
    service:
      name: motowild-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: motowild-service
            port:
              number: 80
